--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@
   text-align: right;
 }
 
-.header .header-img {
+.header 
+.header-img {
   width: 100%;
 }
 
-.header .header-info {
+.header 
+.header-info {
   font-family: fantasy, cursive;
 }
 
@@ -49,11 +51,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li, 
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
@@ -118,7 +122,6 @@ input,button{
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -139,38 +142,47 @@ input,button{
   width: 226px;
 }
 
-.todo-item >    .task[type="text"] {
+.todo-item > .task[type="text"] {
   width: 226px;
 }
 
-.delete .todo-img {
+.delete 
+.todo-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete .todo-img:hover {
+.delete 
+.todo-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
 
-.todo#completed-tasks .task {
+.todo#completed-tasks 
+.task {
   text-decoration: line-through;
-    color: #888;
+  color: #888;
 }
 
 /* Edit Task */
 
-.todo .todo-item .task[type=text] {
+.todo 
+.todo-item 
+.task[type=text] {
   display: none;
 }
 
-.todo .todo-item.edit-mode .task[type=text] {
+.todo 
+.todo-item.edit-mode 
+.task[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-.todo .todo-item.edit-mode .task {
+.todo 
+.todo-item.edit-mode 
+.task {
   display: none;
 }
