--- a/style.css
+++ b/style.css
@@ -13,13 +13,11 @@
   text-align: right;
 }
 
-.header 
-.header-img {
+.header__img {
   width: 100%;
 }
 
-.header 
-.header-info {
+.header__info {
   font-family: fantasy, cursive;
 }
 
@@ -42,7 +40,7 @@
   flex-grow: 1;
 }
 
-.task-wrapper {
+.main-header__task-wrapper {
   display: flex;
 }
 
@@ -78,7 +76,7 @@ button{
 /* Heading */
 
 .todo-title,
-.add-task[for='new-task'] {
+.main-header__add-task[for='new-task'] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -107,7 +105,7 @@ button{
 
 /* New Task */
 
-.add-task[for='new-task'] {
+.main-header__add-task[for='new-task'] {
   display: block;
   margin: 0 0 20px;
 }
@@ -118,43 +116,38 @@ button{
 
 /* Task list */
 
-.todo-item {
+.todo__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.todo-item > * {
   vertical-align: middle;
 }
 
-.todo-item > .todo-check[type="checkbox"] {
+.item__check[type="checkbox"] {
   margin: 0 10px;
 }
 
-.todo-item > .task {
+.todo__item > .task {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.todo-item > .task[type="text"] {
+.todo__item > .task[type="text"] {
   width: 226px;
 }
 
-.delete 
-.todo-img {
+.delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete 
-.todo-img:hover {
+.delete__img:hover {
   transform: rotateZ(0);
 }
 
@@ -168,21 +161,18 @@ button{
 
 /* Edit Task */
 
-.todo 
-.todo-item 
+.todo__item 
 .task[type=text] {
   display: none;
 }
 
-.todo 
-.todo-item.edit-mode 
+.todo__item.todo__item--edit 
 .task[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-.todo 
-.todo-item.edit-mode 
+.todo__item.todo__item--edit
 .task {
   display: none;
 }
